--- a/sample/sample.cshtml
+++ b/sample/sample.cshtml
@@ -9,17 +9,53 @@ Hello @(Model.Name), welcome to RazorEngine! from file.
 *@
 @{
 	for( int i = 0; i < 5; i++ ){
+		// インデントあり。
 		<text>no : @i</text>
+		// インデントなし。@() 内の文字列を出力する
+		@("no : " + i.ToString() + "\n")
 	}
 }
 ---- ----
 @for( int j = 0; j < 10; j++ ){
 	if ( j == 0 ){
+		// zero 出力。インデントされている
 		@:zero
+		// zero 出力。インデントされている
+		<text>zero</text>
+		// zero 出力。インデントされてないし、改行もしていない。
+		@("zero")
 	}else if ( ( j & 1 ) == 0 ){
 <text>even : j = @j</text>
 	}else{
-		<text>odd  : j = @j</text>
+	<text>odd  : j = @j</text>
 	}
 }
 ---- ----
+0 < 100
+---- ----
+<element></element>
+---- ----
+@{
+	var a = 100;
+	// 'a'という文字が出力される。インデントされてる
+	@:a
+	// 100 が出力される。インデントされてない。
+	@(a)
+	@:
+
+	var e = "<element></element>";
+	// デフォルトだと &lt;element&gt;&lt;/element&gt;
+	// config.EncodedStringFactory = new RawStringFactory(); だと <element></element>
+	@(e)
+	@:
+	// デフォルトだと &lt;element&gt;&lt;/element&gt;
+	// config.EncodedStringFactory = new RawStringFactory(); だと <element></element>
+	@("<element></element>")
+	@:
+	// インデントされる <element></element>
+	@:<element></element>
+	// インデントされる "<element></element>"
+	@:"<element></element>"
+
+
+}
